--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2"
+  },
+  "clean-publish": {
+    "cleanDocs": true,
+    "cleanComments": true
   }
 }
