--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.js"
     }
   },
-  "main": "./dist/index.mjs",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
@@ -36,8 +35,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
-    "dev": "unbuild --stub",
+    "build": "tsup",
     "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp && clean-publish",
@@ -50,14 +48,15 @@
     "@antfu/ni": "^0.17.2",
     "@types/node": "^18.7.13",
     "bumpp": "^8.2.1",
+    "clean-publish": "^4.0.1",
     "eslint": "^8.22.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
+    "tsup": "^6.2.3",
     "typescript": "^4.8.2",
     "unbuild": "^0.8.9",
     "vite": "^3.0.9",
-    "vitest": "^0.22.1",
-    "clean-publish": "^4.0.1"
+    "vitest": "^0.22.1"
   },
   "dependencies": {
     "axios": "^0.27.2"
