--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "main": "./dist/index.js",
@@ -44,22 +44,22 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.26.1",
-    "@antfu/ni": "^0.17.2",
-    "@types/node": "^18.7.13",
+    "@antfu/eslint-config": "^0.33.1",
+    "@antfu/ni": "^0.18.8",
+    "@types/node": "^18.11.13",
     "bumpp": "^8.2.1",
-    "clean-publish": "^4.0.1",
-    "eslint": "^8.22.0",
+    "clean-publish": "^4.0.2",
+    "eslint": "^8.29.0",
     "esno": "^0.16.3",
     "rimraf": "^3.0.2",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.2",
-    "unbuild": "^0.8.9",
-    "vite": "^3.0.9",
-    "vitest": "^0.22.1"
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4",
+    "unbuild": "^1.0.2",
+    "vite": "^4.0.0",
+    "vitest": "^0.25.7"
   },
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^1.2.1"
   },
   "clean-publish": {
     "cleanDocs": true,
