--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
   ],
   "scripts": {
     "build": "tsup",
-    "lint": "eslint .",
+    "lint": "eslint '{src,test}/**/*.ts' --cache --fix",
     "prepublishOnly": "nr build",
     "release": "bumpp && clean-publish",
     "start": "esno src/index.ts",
+    "format": "prettier --write --cache \"src/**/*.ts\" \"test/**/*.ts\"",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
@@ -51,6 +52,7 @@
     "clean-publish": "^4.0.2",
     "eslint": "^8.29.0",
     "esno": "^0.16.3",
+    "prettier": "^2.8.3",
     "rimraf": "^3.0.2",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4",
